--- a/app/pages/placement/placement-page.scss
+++ b/app/pages/placement/placement-page.scss
@@ -1,10 +1,12 @@
 #image-overlay {
   background-color: rgba(0, 0, 0, 0.7);
+  
 }
 
 #placement-oval {
-  background-color: rgba(0, 0, 255, 0.5);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  background-color: rgba(0, 224, 135, 0.65);
+  border-color: #00e187;
+  border-width: 2;
+  clip-path: ellipse(50% 50% at 50% 50%);
+
 }
