--- a/app/pages/placement/placement-page.scss
+++ b/app/pages/placement/placement-page.scss
@@ -1,3 +1,7 @@
+@import '~/common-styles/actionBar';
+@import '~/common-styles/navigationButtonsContainer';
+@import '~/common-styles/buttons';
+
 #image-overlay {
   background-color: rgba(0, 0, 0, 0.7);
   
