--- a/app/app.android.scss
+++ b/app/app.android.scss
@@ -1,2 +1,6 @@
 @import 'app-common';
 @import '~nativescript-theme-core/scss/platforms/index.android';
+
+.mdi {
+    font-family: "Material Icons", "MaterialIcons-Regular";
+  }
