--- a/app/app.ios.scss
+++ b/app/app.ios.scss
@@ -1,2 +1,6 @@
 @import 'app-common';
 @import '~nativescript-theme-core/scss/platforms/index.ios';
+
+.mdi {
+    font-family: "Material Icons", "MaterialIcons-Regular";
+  }
