--- a/app/pages/background/background-chooser-modal.scss
+++ b/app/pages/background/background-chooser-modal.scss
@@ -7,9 +7,9 @@
     align-items: center;
     flex-direction: row;
     justify-content: space-between;
-    vertical-align: center;
     margin-left: 0;
     margin-right: 0;
+    vertical-align: center;
     width: 100%;
 
     & .action-bar-title{
@@ -23,4 +23,10 @@
     & .action-bar-step{
         color: red;
     }
+
+}
+
+.chosen-file{
+    border-color: $mainBgdColor;
+    border-width: 2;
 }
