--- a/app/pages/background/background-page.scss
+++ b/app/pages/background/background-page.scss
@@ -1,6 +1,6 @@
-@import '~/common-styles/actionBar';
-@import '~/common-styles/navigationButtonsContainer';
-@import '~/common-styles/buttons';
+@import '~/common-styles/_actionBar.scss';
+@import '~/common-styles/_navigationButtonsContainer.scss';
+@import '~/common-styles/_buttons.scss';
 
 .action-bar{
     & .steps{
