--- a/app/pages/final/final-page.scss
+++ b/app/pages/final/final-page.scss
@@ -1,3 +1,3 @@
-@import '~/common-styles/actionBar';
-@import '~/common-styles/navigationButtonsContainer';
-@import '~/common-styles/buttons';
+@import '~/common-styles/_actionBar.scss';
+@import '~/common-styles/_navigationButtonsContainer.scss';
+@import '~/common-styles/_buttons.scss';
