--- a/app/common-styles/_variables.scss
+++ b/app/common-styles/_variables.scss
@@ -4,13 +4,14 @@ $mainFontColor: black;
 $secondaryBackgroundColor: #5a32ff;
 $secondaryFontColor: white;
 
-$fontSize: 25;
+$fontFamily: 'OpenSans-Regular', sans-serif;
+$fontSize: 23;
 
 $ovalColor: $mainBackgroundColor;
 
 $actionbarBackgroundColor: #e5e5e5;
 $actionbarFontColor: $secondaryBackgroundColor;
-$actionbarFontSize: 30;
+$actionbarFontSize: 23;
 $actionbarHeight: 70;
 $actionbarSecondaryFontColor: #ff3232;
 
