--- a/app/pages/background/background-chooser-modal.scss
+++ b/app/pages/background/background-chooser-modal.scss
@@ -11,7 +11,10 @@
     margin-right: 0;
     vertical-align: center;
     width: 100%;
-
+    
+    & label{
+        padding: 0;
+    }
     & .action-bar-title{
         width:60%;
     }
@@ -21,7 +24,7 @@
     }
 
     & .action-bar-step{
-        color: red;
+        color: $actionbarSecondaryFontColor;
     }
 
 }
@@ -32,5 +35,5 @@
 }
 
 .btn-download {
-    visibility: collapse;
+    visibility: hidden;
 }
