--- a/app/common-styles/_variables.scss
+++ b/app/common-styles/_variables.scss
@@ -4,6 +4,9 @@ $mainFontColor: black;
 $secondaryBackgroundColor: #5a32ff;
 $secondaryFontColor: white;
 
+$startEndBackgroundColor: #ffe646;
+$startEndFontColor: black;
+
 $fontFamily: 'OpenSans-Regular', sans-serif;
 $fontSize: 23;
 
