--- a/app/pages/background/background-chooser-modal.scss
+++ b/app/pages/background/background-chooser-modal.scss
@@ -9,6 +9,7 @@
     justify-content: space-between;
     margin-left: 0;
     margin-right: 0;
+    padding-left: 15;
     vertical-align: center;
     width: 100%;
     
