Add font WorkSans-Medium (#29)

--- a/app/common-styles/_actionBar.scss
+++ b/app/common-styles/_actionBar.scss
@@ -51,8 +51,8 @@
             background-position: center;
             background-repeat: no-repeat;
             background-size: contain;
-            height: 30;
-            width: 30;
+            height: $buttonIconSize;
+            width: $buttonIconSize;
         }
        }
     }
