--- a/app/common-styles/_actionBar.scss
+++ b/app/common-styles/_actionBar.scss
@@ -47,7 +47,7 @@
 
        & .action-bar-step{
         & .info{
-            background-image: url("res://info");
+            background-image: url("res://info_v2");
             background-position: center;
             background-repeat: no-repeat;
             background-size: contain;
