--- a/app/common-styles/_actionBar.scss
+++ b/app/common-styles/_actionBar.scss
@@ -26,6 +26,7 @@
 
     & .action-bar-step{
         color: red;
+        vertical-align: middle;
     }
     & .action-bar-start{
         width: 90%;
