--- a/app/pages/final/final-page.scss
+++ b/app/pages/final/final-page.scss
@@ -1,6 +1,7 @@
 @import '~/common-styles/_actionBar.scss';
 @import '~/common-styles/_navigationButtonsContainer.scss';
 @import '~/common-styles/_buttons.scss';
+@import '~/common-styles/_logo.scss';
 
 .action-bar{
     label{
