--- a/app/pages/background-gallery/background-gallery-download-page.scss
+++ b/app/pages/background-gallery/background-gallery-download-page.scss
@@ -2,32 +2,37 @@
 @import '~/common-styles/_navigationButtonsContainer.scss';
 @import '~/common-styles/_buttons.scss';
 @import '~/common-styles/_variables.scss';
-
-
-#action-bar-fake{
+@import '~/common-styles/_logo.scss';
+#action-bar-fake {
     @extend .action-bar;
     align-items: center;
     flex-direction: row;
     justify-content: flex-start;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 5;
     vertical-align: center;
-    margin-left: 5;
     width: 100%;
-
-    .action-bar-step{
-        @extend %button;
+    .action-bar-step {
+        @extend %icon;
         background-image: url("res://arrow_left_red_v2");
+        width: 20%;
+    }
+    .action-bar-title {
+        width: 60%;
     }
 }
-.chosen-file{
+
+.chosen-file {
     border-color: $mainBackgroundColor;
-    border-radius: 0;
-    border-width: 2;
 }
-.btn-download{
-    @extend %button;
+
+.btn-download {
+    @extend %icon;
     background-image: url("res://download_black_v2");
 }
-.btn-busy{
+
+.btn-busy {
     background-color: $actionbarBackgroundColor;
     color: #bdbdbd;
     opacity: 0.5;
