--- a/app/pages/face/face-page.scss
+++ b/app/pages/face/face-page.scss
@@ -1,6 +1,7 @@
 @import '~/common-styles/_actionBar.scss';
 @import '~/common-styles/_navigationButtonsContainer.scss';
 @import '~/common-styles/_buttons.scss';
+@import '~/common-styles/_logo.scss';
 
 #image-overlay {
   background-color: rgba(0, 0, 0, 0.7);
