--- a/app/pages/placement/placement-page.scss
+++ b/app/pages/placement/placement-page.scss
@@ -1,6 +1,8 @@
 @import '~/common-styles/_actionBar.scss';
 @import '~/common-styles/_navigationButtonsContainer.scss';
 @import '~/common-styles/_buttons.scss';
+@import '~/common-styles/_logo.scss';
+
 #placement-oval {
   background-repeat: no-repeat;
   background-size: cover;
@@ -10,8 +12,8 @@
 .action-bar {
   & .steps {
     & .action-bar-title {
-      width: 80%;
-      text-align: left;
+      width: 65%;
+      text-align: center;
     }
   }
 }
