--- a/app/common-styles/_variables.scss
+++ b/app/common-styles/_variables.scss
@@ -30,3 +30,6 @@ $actionbarSecondaryFontColor: #ff3232;
 
 $fakeActionBarMarginTop: -1 * $actionbarHeight / 2;
 
+$animationDuration: 1s;
+
+$dangerColor: red;
