--- a/app/common-styles/_actionBar.scss
+++ b/app/common-styles/_actionBar.scss
@@ -57,6 +57,7 @@
             background-position: right;
             background-repeat: no-repeat;
             background-size: cover;
+            horizontal-align: right;
             height: $buttonIconSize;
             width: $buttonIconSize;
         }
